with/without ssba

--- a/sfm/Makefile
+++ b/sfm/Makefile
@@ -8,19 +8,21 @@ SRCS = AbstractFeatureMatcher.cpp BundleAdjuster.cpp Common.cpp Distance.cpp Fin
        file_Interface.cpp \
        main.cpp
 
-
 OBJS = $(SRCS:.cpp=.o)
 
-CFLAGS = -O2 \
-         -I/usr/local/opencv-2.4.9/include \
-         -I ./3rdparty/SSBA-3.0/ 
+CFLAGS = -O2 -I/usr/local/opencv-2.4.9/include 
+LIBS = /usr/local/lib/libopencv* 
 
-LIBS =  ./3rdparty/SSBA-3.0/build/libV3D.a \
+all: sfm sfm2
+
+sfm: $(SRCS)
+	$(CXX) $(CFLAGS) -o $@ $(SRCS) $(LIBS)
+
+sfm2: $(SRCS)
+	$(CXX) $(CFLAGS) -o $@ $(SRCS) $(LIBS) \
+        -I ./3rdparty/SSBA-3.0/  -D__USE_SSBA__ \
+        ./3rdparty/SSBA-3.0/build/libV3D.a \
         ./3rdparty/SSBA-3.0/build/libcolamd.a \
-        /usr/local/lib/libopencv* \
-
-sfm: $(OBJS)
-	$(CXX) $(CFLAGS) -o $@ $(OBJS) $(LIBS)
 
 .cpp.o:
 	$(CXX) -c $(CFLAGS) $<
