2view reconstruction w/o ba

--- a/X/Makefile
+++ b/X/Makefile
@@ -2,7 +2,7 @@
 
 CXX = clang++  
 
-SRCS = main.cpp XBuilder.cpp sfm.cpp
+SRCS = main.cpp XBuilder.cpp sfm.cpp fmatrix_matching.cpp
 
 
 OBJS = $(SRCS:.cpp=.o)
@@ -10,12 +10,12 @@ OBJS = $(SRCS:.cpp=.o)
 CFLAGS = -O2 \
          -I/usr/local/opencv-2.4.9/include \
 
-LIBS =  ./3rdparty/SSBA-3.0/build/libV3D.a \
-        ./3rdparty/SSBA-3.0/build/libcolamd.a \
+LIBS =  ../sfm/3rdparty/SSBA-3.0/build/libV3D.a \
+        ../sfm/3rdparty/SSBA-3.0/build/libcolamd.a \
         /usr/local/lib/libopencv* \
 
-sfm: $(OBJS)
-	$(CXX) $(CFLAGS) -o $@ $(OBJS) $(LIBS)
+xBulder: $(SRCS)
+	$(CXX) $(CFLAGS) -o $@ $(SRCS) $(LIBS)
 
 .cpp.o:
 	$(CXX) -c $(CFLAGS) $<
